# NetDuty

./: build_script.py  flet.yaml  main.py  pyproject.toml
.github/workflows/: build.yml
NetDuty/: NetDuty.spec
NetDuty/src/Classes/: dsadasdas1d.json  УльяновскМБОУ ГИЛ 1029А.json
src/: NetDuty.spec  launcher.py  main.py
src/Classes/: UlyanovskМБОУ 795б.json  asdsaadsad1d.json
